# olio-ohjelmointi

./: .gitignore  readme.txt
H1/: CMakeLists.txt  ali.cpp  ali.h  main.cpp
H5/: CMakeLists.txt  classa1.cpp  classa1.h  classa2.cpp  classa2.h  classb.cpp  classb.h  main.cpp
VT1/: CMakeLists.txt  main.cpp
h2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/: CMakeLists.txt  car.cpp  car.h  main.cpp
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: car.cpp  car.h  engine.cpp  main.cpp  wheel.cpp  wheel.h
h6a/: h6a.pro  main.cpp  myclass.h
h6b/: exampleclass.cpp  exampleclass.h  main.cpp
h7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
